<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/label_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textStyle="bold"
        android:fontFamily="@font/google_sans"
        android:textColor="@color/dark"
        android:textSize="21sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12.5dp"
        app:layout_constraintTop_toBottomOf="@id/label_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="2dp"
        app:cardMaxElevation="2dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mode"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/google_sans" />

            <!-- Manual -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageButton
                    android:id="@+id/btn_manual"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/on"
                    android:scaleType="fitCenter"
                    android:background="@drawable/image_button_custom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manual"
                    android:layout_marginStart="12dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/google_sans"/>
            </LinearLayout>

            <!-- Automatic -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="0dp">

                <ImageButton
                    android:id="@+id/btn_automatic"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/off"
                    android:scaleType="fitCenter"
                    android:background="@drawable/image_button_custom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/automatic"
                    android:layout_marginStart="12dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/google_sans"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_preset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="12.5dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/card_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="16dp" >

            <TextView
                android:id="@+id/label_preset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_preset"
                android:textStyle="bold"
                android:fontFamily="@font/google_sans"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/label_preset_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preset_details"
                android:fontFamily="@font/google_sans"
                android:layout_marginTop="0dp"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/preset_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="20dp">

                <!-- ROW 1 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <!-- Auto Off -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_marginEnd="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/auto_off"
                            android:textSize="14sp"
                            android:textColor="@color/dark"
                            android:fontFamily="@font/google_sans"
                            android:includeFontPadding="false" />

                        <EditText
                            android:id="@+id/et_auto_off"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:background="@drawable/input_box_bg"
                            android:padding="8dp"
                            android:textColor="@color/dark"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <!-- Auto Low -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_marginStart="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/auto_low"
                            android:textSize="14sp"
                            android:textColor="@color/dark"
                            android:fontFamily="@font/google_sans"
                            android:includeFontPadding="false" />

                        <EditText
                            android:id="@+id/et_auto_low"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_box_bg"
                            android:inputType="number"
                            android:padding="8dp"
                            android:textColor="@color/dark"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <!-- ROW 2 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Auto Medium -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_marginEnd="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/auto_medium"
                            android:textSize="14sp"
                            android:textColor="@color/dark"
                            android:fontFamily="@font/google_sans"
                            android:includeFontPadding="false" />

                        <EditText
                            android:id="@+id/et_auto_mid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:background="@drawable/input_box_bg"
                            android:padding="8dp"
                            android:textColor="@color/dark"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <!-- Auto High -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_marginStart="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/auto_high"
                            android:textSize="14sp"
                            android:textColor="@color/dark"
                            android:fontFamily="@font/google_sans"
                            android:includeFontPadding="false" />

                        <EditText
                            android:id="@+id/et_auto_high"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:background="@drawable/input_box_bg"
                            android:padding="8dp"
                            android:textColor="@color/dark"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_preset"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/save_preset"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/google_sans"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:cornerRadius="5dp"
                android:layout_marginBottom="15dp"
                app:backgroundTint="@color/blue"
                app:rippleColor="@color/highlight_color"
                app:iconPadding="8dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <include
        layout="@layout/bottom_navbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>