<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textStyle="bold"
        android:fontFamily="@font/google_sans"
        android:textColor="@color/dark"
        android:textSize="21sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_monitor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="12.5dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="16dp"
            android:weightSum="3">

            <!-- Column 1: Mode -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mode"
                    android:textStyle="bold"
                    android:fontFamily="@font/google_sans"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/mode_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"
                    android:textSize="16sp"
                    android:fontFamily="@font/google_sans"
                    android:textColor="@color/highlight_color"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Column 2: Temperature -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/label_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textStyle="bold"
                    android:fontFamily="@font/google_sans"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/temperature_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/google_sans"
                    android:textColor="@color/highlight_color" />
            </LinearLayout>

            <!-- Column 3: Speed -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="end">

                <TextView
                    android:id="@+id/label_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:textStyle="bold"
                    android:fontFamily="@font/google_sans"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/speed_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/google_sans"
                    android:textColor="@color/highlight_color" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Speed & Swing Controls -->
    <LinearLayout
        android:id="@+id/layout_speed_swing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/card_monitor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Left Column : Speed -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="12.5dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="2dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:fontFamily="@font/google_sans"
                    android:layout_marginBottom="8dp"/>

                <!-- Off -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageButton
                        android:id="@+id/btn_speed_off"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/on"
                        android:scaleType="fitCenter"
                        android:background="@drawable/image_button_custom"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/off"
                        android:layout_marginStart="12dp"
                        android:textSize="16sp"
                        android:fontFamily="@font/google_sans"/>
                </LinearLayout>

                <!-- Low -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="0dp">

                    <ImageButton
                        android:id="@+id/btn_speed_low"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/off"
                        android:scaleType="fitCenter"
                        android:background="@drawable/image_button_custom"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/low"
                        android:layout_marginStart="12dp"
                        android:textSize="16sp"
                        android:fontFamily="@font/google_sans"/>
                </LinearLayout>

                <!-- Mid -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="0dp">

                    <ImageButton
                        android:id="@+id/btn_speed_mid"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/off"
                        android:scaleType="fitCenter"
                        android:background="@drawable/image_button_custom"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mid"
                        android:layout_marginStart="12dp"
                        android:textSize="16sp"
                        android:fontFamily="@font/google_sans"/>
                </LinearLayout>

                <!-- High -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="0dp">

                    <ImageButton
                        android:id="@+id/btn_speed_high"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/off"
                        android:scaleType="fitCenter"
                        android:background="@drawable/image_button_custom"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/high"
                        android:layout_marginStart="12dp"
                        android:textSize="16sp"
                        android:fontFamily="@font/google_sans"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- RIGHT COLUMN : SWING -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_swing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="12.5dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="2dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:orientation="vertical"
                android:gravity="end">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/swing"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:fontFamily="@font/google_sans"
                    android:layout_marginBottom="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageButton
                        android:id="@+id/btn_swing_left_right"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/off"
                        android:scaleType="fitCenter"
                        android:background="@drawable/image_button_custom"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/left_to_right"
                        android:layout_marginStart="12dp"
                        android:textSize="16sp"
                        android:fontFamily="@font/google_sans"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="0dp"
                    android:gravity="center_vertical">

                    <ImageButton
                        android:id="@+id/btn_swing_up_down"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/off"
                        android:scaleType="fitCenter"
                        android:background="@drawable/image_button_custom"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/up_down"
                        android:layout_marginStart="12dp"
                        android:textSize="16sp"
                        android:fontFamily="@font/google_sans"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <include
        layout="@layout/bottom_navbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>